# Pytorch-Docker-Builder

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
image-builder/: constants.py  main.py  report.py  templates.py  utils.py
local-build-scripts/: build_1.10.0-py3.6-cuda11.1.0-ubuntu20.04.sh  build_1.10.0-py3.6-cuda11.1.1-ubuntu20.04.sh  build_1.10.0-py3.6-cuda11.3.1-ubuntu20.04.sh  build_1.10.0-py3.7-cuda11.1.0-ubuntu20.04.sh  build_1.10.0-py3.7-cuda11.1.1-ubuntu20.04.sh  build_1.10.0-py3.7-cuda11.3.1-ubuntu20.04.sh  build_1.10.0-py3.8-cuda11.1.0-ubuntu20.04.sh  build_1.10.0-py3.8-cuda11.1.1-ubuntu20.04.sh  build_1.10.0-py3.8-cuda11.3.1-ubuntu20.04.sh  build_1.10.0-py3.9-cuda11.1.0-ubuntu20.04.sh  build_1.10.0-py3.9-cuda11.1.1-ubuntu20.04.sh  build_1.10.0-py3.9-cuda11.3.1-ubuntu20.04.sh  build_1.10.1-py3.6-cuda11.1.0-ubuntu20.04.sh  build_1.10.1-py3.6-cuda11.1.1-ubuntu20.04.sh  build_1.10.1-py3.6-cuda11.3.1-ubuntu20.04.sh  build_1.10.1-py3.7-cuda11.1.0-ubuntu20.04.sh  build_1.10.1-py3.7-cuda11.1.1-ubuntu20.04.sh  build_1.10.1-py3.7-cuda11.3.1-ubuntu20.04.sh  build_1.10.1-py3.8-cuda11.1.0-ubuntu20.04.sh  build_1.10.1-py3.8-cuda11.1.1-ubuntu20.04.sh  build_1.10.1-py3.8-cuda11.3.1-ubuntu20.04.sh  build_1.10.1-py3.9-cuda11.1.0-ubuntu20.04.sh  build_1.10.1-py3.9-cuda11.1.1-ubuntu20.04.sh  build_1.10.1-py3.9-cuda11.3.1-ubuntu20.04.sh  build_1.10.2-py3.6-cuda11.1.0-ubuntu20.04.sh  build_1.10.2-py3.6-cuda11.1.1-ubuntu20.04.sh  build_1.10.2-py3.6-cuda11.3.1-ubuntu20.04.sh  build_1.10.2-py3.7-cuda11.1.0-ubuntu20.04.sh  (+699 more)
tests/: conftest.py  (+1 more)
(+918 files in other folders)
